--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "yeoman-generator": "^0.17.0",
     "chalk": "^0.5.0",
     "yosay": "^0.3.0",
-    "wiredep": "^2.0",
+    "wiredep": "^2.0"
   },
   "devDependencies": {
     "mocha": "*"
