--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "generator-gulp-website",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Yeoman generator",
   "license": "MIT",
   "main": "app/index.js",
   "repository": "lynnwallenstein/generator-gulp-website",
   "author": {
     "name": "Lynn Wallenstein",
-    "email": "lynn@github.com",
+    "email": "lynn.wallenstein@gmail.com",
     "url": "https://github.com/lynnwallenstein"
   },
   "engines": {
